syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.DescriptionQuestionnaire.proto";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "DescriptionQuestionnaireProto";
option objc_class_prefix = "HLW";

package Amargar;


service DescriptionQuestionnaire{
  rpc GetDiscriptionQuestionnaire (DescriptionQuestionnaireRequest) returns (DescriptionQuestionnaireReplyList);
}

message DescriptionQuestionnaireRequest{

}

message DescriptionQuestionnaireReply{
  int32 DescriptionQuestionnaireID = 1;
  string Description = 2;
}

message DescriptionQuestionnaireReplyList{
  repeated DescriptionQuestionnaireReply DescriptionQuestionnaires = 1;
}